Made sure chart axes start at 0

--- a/BlazorTest1/wwwroot/index.html
+++ b/BlazorTest1/wwwroot/index.html
@@ -31,6 +31,13 @@
                     }]
                 },
                 options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                min: 0
+                            }
+                        }]
+                    },
                     tooltips: {
                         enabled: false
                     }
